Bug 129940 - FILEOPEN: Cell content in ODS exported by Excel with Asian phonetic guide ​​is displayed as empty
Summary: FILEOPEN: Cell content in ODS exported by Excel with Asian phonetic guide ​​i...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: odf target:7.2.0 target:7.1.1
Keywords: bibisected, regression
: 130750 (view as bug list)
Depends on:
Blocks: Ruby CJK CJK-Japanese
  Show dependency treegraph
 
Reported: 2020-01-11 08:24 UTC by Naruhiko Ogasawara
Modified: 2021-04-30 07:16 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
ODS file exported by Excel, with Asian phonetic guides (3.19 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-01-11 08:24 UTC, Naruhiko Ogasawara
Details
Modified ODS file, take text:ruby tag out from the cell content (3.40 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-01-11 08:27 UTC, Naruhiko Ogasawara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Naruhiko Ogasawara 2020-01-11 08:24:15 UTC
Created attachment 157073 [details]
ODS file exported by Excel, with Asian phonetic guides

Cell content in ODS exported by Excel with Asian phonetic guides ​​is displayed as empty.

Step to reproduce:

1. Open attached ODS file (BookByExcel.ods)
2. See the content

Expected:

Can see the content "小笠原" "徳彦"

Actual:

No content displayed
Comment 1 Naruhiko Ogasawara 2020-01-11 08:25:25 UTC
The "content.xml" in the ODS seems:

  <office:body>
    <office:spreadsheet>
      <table:calculation-settings table:case-sensitive="false" table:search-criteria-must-apply-to-whole-cell="true" table:use-wildcards="true" table:use-regular-expressions="false" table:automatic-find-labels="false"/>
      <table:table table:name="Sheet1" table:style-name="ta1">
        <table:table-column table:style-name="co1" table:number-columns-repeated="16384" table:default-cell-style-name="ce1"/>
        <table:table-row table:style-name="ro1">
          <table:table-cell office:value-type="string" table:style-name="ce1">
            <text:p>
              <text:ruby text:style-name="ru1">
                <text:ruby-base>小笠原</text:ruby-base>
                <text:ruby-text text:style-name="T1">オガサワラ </text:ruby-text>
              </text:ruby>
            </text:p>
          </table:table-cell>
          <table:table-cell office:value-type="string" table:style-name="ce1">
            <text:p>
              <text:ruby text:style-name="ru1">
                <text:ruby-base>徳彦</text:ruby-base>
                <text:ruby-text text:style-name="T1">ナルヒコ </text:ruby-text>
              </text:ruby>
            </text:p>
          </table:table-cell>
          <table:table-cell table:number-columns-repeated="16382"/>
        </table:table-row>
        <table:table-row table:number-rows-repeated="1048575" table:style-name="ro1">
          <table:table-cell table:number-columns-repeated="16384"/>
        </table:table-row>
      </table:table>
    </office:spreadsheet>
  </office:body>

And with modification of the ODS as follows (attached BookByExcel-modified.ods), I can see the cell content "小笠原":

  <office:body>
    <office:spreadsheet>
      <table:calculation-settings table:case-sensitive="false" table:search-criteria-must-apply-to-whole-cell="true" table:use-wildcards="true" table:use-regular-expressions="false" table:automatic-find-labels="false"/>
      <table:table table:name="Sheet1" table:style-name="ta1">
        <table:table-column table:style-name="co1" table:number-columns-repeated="16384" table:default-cell-style-name="ce1"/>
        <table:table-row table:style-name="ro1">
          <table:table-cell office:value-type="string" table:style-name="ce1">
            <text:p>小笠原</text:p>
          </table:table-cell>
          (...snip...)
        </table:table-row>
      </table:table>
    </office:spreadsheet>
  </office:body>

So I guess the problem is Calc can't handle <text:ruby> tag inside <table:table-cell> tag well.
Comment 2 Naruhiko Ogasawara 2020-01-11 08:27:19 UTC
Created attachment 157074 [details]
Modified ODS file, take text:ruby tag out from the cell content
Comment 3 Ming Hua 2020-01-13 18:34:01 UTC
I can reproduce the reported behavior (no content displayed in attachment 157073 [details], "小笠原" displayed in the modified ODS attachment 157074 [details]) on 6.3.4:
版本: 6.3.4.2 (x64)
Build ID: 60da17e045e08f1793c57c00ba83cdfce946d0aa
CPU 线程: 2; 操作系统: Windows 10.0; UI 渲染: 默认; VCL: win; 
区域语言: zh-CN (zh_CN); UI 语言: zh-CN
Calc: threaded

I have no idea if this is LO's fault or Excel exporting a problematic ODS file, though.  So let's ping the Ruby meta bug and see if the experts there can shine some light on this.
Comment 4 Xisco Faulí 2020-02-17 14:56:43 UTC
I can reproduce it in

Version: 7.0.0.0.alpha0+
Build ID: 28d844a589e52abfe62dc66b888e78665221ba28
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

and


Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

but not in

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

thus, seems to be a regression
Comment 6 Naruhiko Ogasawara 2020-02-18 04:36:52 UTC
*** Bug 130750 has been marked as a duplicate of this bug. ***
Comment 7 Jun Nogata 2020-07-08 01:09:45 UTC
reproduce it.

Version: 7.0.0.1 (x86)
Build ID: 04ba7e3f1e51af6c5d653e543a620e36719083fd
CPU threads: 2; OS: Windows 10.0 Build 19041; UI render: default; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: threaded

Excel
Version: 1909
Build: 12026.20344
Comment 8 jun meguro 2020-07-12 11:27:09 UTC
Reproduced below

Version: 7.1.0.0.alpha0+
Build ID: 098e26eef7dc7e792eddd05c66354616fde81c72
CPU threads: 8; OS:Linux 5.4; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-07-11_18:16:52
Calc: threaded
Comment 9 Jun Nogata 2020-09-04 04:49:14 UTC
Reproduced.

Version: 7.0.1.2 (x64)
Build ID: 7cbcfc562f6eb6708b5ff7d7397325de9e764452
CPU threads: 2; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 10 Jun Nogata 2020-09-04 04:52:58 UTC
This is a serious bug.

If you open a file and the "letter" and "read" are missing in the sentence "I can't read the letter", do you think it's OK?

This is a bug that shows "I Can't the" not "I Can't read the letter". Does "I Can't the" make sense to you?

It's a very serious bug for Japanese user.
Comment 11 Shinji Enoki 2020-10-14 22:43:15 UTC
Reproduced in the following environment

Version: 7.1.0.0.alpha0+
Build ID: 231a4e024b85aa0ad06a5632d3f514152babea30
CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-10-14_08:06:21
Calc: threaded
Comment 12 Commit Notification 2021-02-08 13:07:52 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e630da1ed8a27c64bc9f22ecb71afd10bf252d93

tdf#129940 handle text:ruby element inside text:p

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Michael Stahl 2021-02-10 09:46:38 UTC
This is valid ODF and a missing feature in EditEngine - currently only Writer can do Ruby.
Comment 14 Commit Notification 2021-02-10 09:56:04 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/297f511263db7434bb10cdc91230b4d3f8ac9aa0

tdf#129940 handle text:ruby element inside text:p

It will be available in 7.1.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 himajin100000 2021-02-11 17:49:14 UTC
confirmed that I can see "小笠原" "徳彦" with

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: e0843b1fe6e39d3e5f14c8f13476008f17c8ed2e
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL
Comment 16 Julien Nabet 2021-04-29 12:37:38 UTC
Following Mark's patch and Himajin100000's comment, can we put this one as RESOLVED/FIXED?
Comment 17 Naruhiko Ogasawara 2021-04-29 23:35:30 UTC
As the original reporter, we can close this as RESOLVED/FIXED.
(but I'm not familiar with BZ, so I leave the status for now.)
Comment 18 Xisco Faulí 2021-04-30 07:15:43 UTC
(In reply to Naruhiko Ogasawara from comment #17)
> As the original reporter, we can close this as RESOLVED/FIXED.
> (but I'm not familiar with BZ, so I leave the status for now.)

Let's close it as VERIFIED FIXED. Thank you all for your work!!