tdf#129940 handle text:ruby element inside text:p

Implement ScXMLCellTextRubyContext for text:ruby.

It creates two types of child elements:
ScXMLCellRubyBaseContext for text:ruby-base,
and ScXMLCellRubyTextContext, for text:ruby-text.

Ruby text isn't used now, but can serve for future
application.

Change-Id: I33b778838032458ffbefc6a2835d2ae59dff30cf